--- a/index.html
+++ b/index.html
@@ -11,22 +11,71 @@
       sizes="32x32"
       href="./assets/images/favicon-32x32.png"
     />
-
     <title>Frontend Mentor | Results summary component</title>
 
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
-    Your Result 76 of 100 Great You scored higher than 65% of the people who
-    have taken these tests. Summary Reaction 80 / 100 Memory 92 / 100 Verbal 61
-    / 100 Visual 72 / 100 Continue
+    <main>
+      <div class="first-box">
+        <h1>Your Result</h1>
+        <div class="average_score">
+          <p class="number_76">76</p>
+          <p class="number_100">of 100</p>
+        </div>
+        <div class="evaluation">
+          <h2>Great</h2>
+          <p>
+            You scored higher than 65% of the people who have taken these tests.
+          </p>
+        </div>
+      </div>
 
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div>
+      <div class="second-box">
+        <h1>Summary</h1>
+        <div class="reaction">
+          <img src="assets/images/icon-reaction.svg" alt="reaction-logo" />
+          <p class="reaction-text">Reaction</p>
+
+          <div class="score">
+            80
+            <p>/ 100</p>
+          </div>
+        </div>
+        <div class="memory">
+          <img src="assets/images/icon-memory.svg" alt="memory-logo" />
+          <p class="memory-text">Memory</p>
+          <div class="score">
+            92
+            <p>/100</p>
+          </div>
+        </div>
+        <div class="verbal">
+          <img src="assets/images/icon-verbal.svg" alt="verbal-logo" />
+          <p class="verbal-text">Verbal</p>
+          <div class="score">
+            61
+            <p>/ 100</p>
+          </div>
+        </div>
+        <div class="visual">
+          <img src="assets/images/icon-visual.svg" alt="visual-logo" />
+          <p class="visual-text">Visual</p>
+          <div class="score">
+            72
+            <p>/ 100</p>
+          </div>
+        </div>
+        <button>Continue</button>
+      </div>
+    </main>
+    <footer>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >.
+      </div>
+    </footer>
   </body>
 </html>
-`
