--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
         <button>Continue</button>
       </div>
     </main>
-    <footer>
-      <div class="attribution">
+    <footer class="attribution">
+      <p>
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
         >.
-      </div>
+      </p>
     </footer>
   </body>
 </html>
