Adds semantic tags to html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <main>
-      <div class="first-box">
+      <section class="first-box">
         <h1>Your Result</h1>
         <div class="average_score">
           <p class="number_76">76</p>
@@ -29,9 +29,9 @@
             You scored higher than 65% of the people who have taken these tests.
           </p>
         </div>
-      </div>
+      </section>
 
-      <div class="second-box">
+      <section class="second-box">
         <h1>Summary</h1>
         <div class="reaction">
           <img src="assets/images/icon-reaction.svg" alt="reaction-logo" />
@@ -67,7 +67,7 @@
           </div>
         </div>
         <button>Continue</button>
-      </div>
+      </section>
     </main>
     <footer class="attribution">
       <p>
